Fix navbar btn alignment

--- a/sass/epretest/bootstrap-custom/_navbar.scss
+++ b/sass/epretest/bootstrap-custom/_navbar.scss
@@ -3,13 +3,12 @@
     >li >a {
       color:       $navbar-nav-item-color;
       font-size:   18px;
-      font-weight: 400;
+      font-weight: 200;
       line-height: 50px;
     }
-  }
 
-  >li >a >.btn {
-    vertical-align: baseline;
+    >li >a >.btn {
+      vertical-align: baseline;
+    }
   }
-
 }
